--- a/public/stylesheets/special.css
+++ b/public/stylesheets/special.css
@@ -1,14 +1,13 @@
 #member_background {
-  background-color: #0B79D9;
-  
+  background-color: #C19A7B;
 }
 
 #meeting_background {
-  background-color: #F2E641;
+  background-color: #F3933C;
 }
 
 #club_background {
-  background-color: #5990D9;
+  background-color: #88BEE4;
 }
 
 #role_background {
