--- a/app/views/meetings/show.html.haml
+++ b/app/views/meetings/show.html.haml
@@ -1,29 +1,33 @@
-.span-4
+%div#header_box.span-16
+  %span.span-4#meeting_background Meeting
+  %span.span-8= @meeting.meeting_date_pretty
+  %span.span-2= link_to '(edit)', edit_meeting_path(@meeting)
+%hr
+.span-16
+  %span.span-4#meeting_background &nbsp;
+  %span.span-8
+    %h3 Theme
+    %span.span-8= @meeting.theme
+.span-16
+  %span.span-4#meeting_background &nbsp;
+  %span.span-10
+    %strong Roles
+    %span.span-8
+      %table
+        = render :partial => 'role', :collection => @roles
+        %tr
+        %td= link_to 'Add Role', new_meeting_role_path(@meeting, @role) 
+.span-16
+  %span.span-4#meeting_background &nbsp;
   %h4 Upcoming 
   = render :partial => 'shared/meeting', :collection => @club.upcoming_meetings
 .span-4
   %h4 Members
   = render :partial => 'shared/member', :collection => @club.members
 .span-12
-  #header_box
-    %span#meeting_background.span-12 Meeting
+
   #content_box.span-16
-    %span.span-4
-      %h3 When
-    %span.span-8= @meeting.meeting_date_pretty
-  #content_box.span-16
-    %span.span-4
-      %h3 Theme
-    %span.span-8= @meeting.theme
-  #content_box.span-16
-    %span.span-4 
-      %h3 Roles
-    %span.span-8
-      %table
-        = render :partial => 'role', :collection => @roles
-        %tr
-          %td= link_to 'Add Role', new_meeting_role_path(@meeting, @role)
+
 .span-4.last
-  %div= link_to 'Edit Meeting', edit_meeting_path(@meeting)
   %div= link_to 'Remove Meeting', @meeting,:confirm => "Are you sure?", :method => :delete
   %div= link_to 'Back to Club', club_path(@club)
