--- a/app/views/clubs/edit.html.haml
+++ b/app/views/clubs/edit.html.haml
@@ -1,7 +1,3 @@
-%h1 Edit your club
-
-= render 'form'
-    
-= link_to 'Show', @club
-\|
-= link_to 'Back', clubs_path
+%div.last
+  = render 'form'
+%div    
