--- a/public/stylesheets/blueprint/screen.css
+++ b/public/stylesheets/blueprint/screen.css
@@ -85,7 +85,7 @@ input[type=text]:focus, input[type=password]:focus, input.text:focus, input.titl
 input[type=text], input[type=password], input.text, input.title, textarea, select {margin:0.5em 0;}
 input.text, input.title {width:300px;padding:5px;}
 input.title {font-size:1.5em;}
-textarea {width:390px;height:250px;padding:5px;}
+textarea {width:390px;padding:5px;}
 form.inline {line-height:3;}
 form.inline p {margin-bottom:0;}
 .error, .notice, .success, .info {padding:0.8em;margin-bottom:1em;border:2px solid #ddd;}
