--- a/app/views/clubs/_form.html.haml
+++ b/app/views/clubs/_form.html.haml
@@ -1,19 +1,19 @@
 = form_for @club do |f|
   %div.span-20
-    %span.span-4#club_background Editing Club
-    %span.span-2
+    %span.span-4.edit_label#club_background Editing Club
+    %span.span-3
       %h4 Name
     %span.span-12= f.text_field :name
   %div.span-20
-    %span.span-2.prepend-4
+    %span.span-3.prepend-4
       %h4 Address
     %span.span-6.textarea= f.text_area :address, :rows => 3
   %div.span-20
-    %span.span-2.prepend-4
+    %span.span-3.prepend-4
       %h4 Club Number
     %span.span-12= f.text_field :club_number
     
-  %div.span-20.prepend-6
+  %div.span-20.prepend-7
     = f.submit 'Save'
     = link_to 'or Cancel', @club
   
