--- a/app/views/clubs/show.html.haml
+++ b/app/views/clubs/show.html.haml
@@ -4,8 +4,17 @@
   %span.span-2= link_to '(edit)', edit_club_path(@club)
 %hr
 %div.span-16
-  %span.span-4#club_background  &nbsp;
-  %span.span-5
+  %div.span-20
+    %span.span-3.prepend-4
+      %h4 Address
+    %span.span-6
+      %code= @club.address
+      %h5= link_to "Map it", map_to(@club.address), {"target"=>"_blank"}
+  %div.span-20
+    %span.span-3.prepend-4
+      %h4 Club Number
+    %span.span-6= @club.club_number
+  %span.span-5.prepend-4
     %h4#meeting_background Upcoming Meetings
     = render :partial => 'shared/meeting', :collection => @club.upcoming_meetings
     = link_to "(+) New Meeting", new_meeting_path
