Meeting 95% there with layout
Removed a lot of cruft.  Simplifed, and it felt good.  Need to fix editing and then it'll be on the road.

Next really big challenge is implementing mailing.

--- a/app/views/clubs/_form.html.haml
+++ b/app/views/clubs/_form.html.haml
@@ -1,6 +1,6 @@
 = form_for @club do |f|
   %div.span-20
-    %span.span-4.edit_label#club_background Editing Club
+    %span.span-4.edit_label.club_background Editing Club
     %span.span-3
       %h4 Name
     %span.span-12= f.text_field :name
