--- a/app/views/clubs/show.html.haml
+++ b/app/views/clubs/show.html.haml
@@ -1,5 +1,5 @@
 %div#header_box.span-16
-  %span.span-4#club_background Club
+  %span.span-4.club_background Club
   %span.span-8= @club.name
   %span.span-2= link_to '(edit)', edit_club_path(@club)
 %hr
@@ -15,11 +15,11 @@
       %h4 Club Number
     %span.span-6= @club.club_number
   %span.span-5.prepend-4
-    %h4#meeting_background Upcoming Meetings
+    %h4.meeting_background Upcoming Meetings
     = render :partial => 'shared/meeting', :collection => @club.upcoming_meetings
     = link_to "(+) New Meeting", new_meeting_path
   %span.span-5
-    %h4#member_background Members
+    %h4.member_background Members
     = render :partial => 'shared/member', :collection => @club.members.sort_by(&:name)
     = link_to "(+) New Member", new_member_path
  
