--- a/app/views/meetings/show.html.haml
+++ b/app/views/meetings/show.html.haml
@@ -1,33 +1,21 @@
-%div#header_box.span-16
-  %span.span-4#meeting_background Meeting
-  %span.span-8= @meeting.meeting_date_pretty
-  %span.span-2= link_to '(edit)', edit_meeting_path(@meeting)
-%hr
-.span-20.colborder
-  %div
-    %h4.span-2.prepend-4
-      Theme:
-    %span.span-12= @meeting.theme
-.span-16
-  %span.span-4#meeting_background &nbsp;
-  %h4.span-2
-    Roles:
-  %span.span-8
-    %table
-      = render :partial => 'role', :collection => @roles
-      %tr
-      %td= link_to '(+ Add Role)', new_meeting_role_path(@meeting, @role) 
-.span-16
-  %span.span-4#meeting_background &nbsp;
-  %h4 Upcoming 
-  = render :partial => 'shared/meeting', :collection => @club.upcoming_meetings
-.span-4
-  %h4 Members
-  = render :partial => 'shared/member', :collection => @club.members
-.span-12
-
-  #content_box.span-16
-
-.span-4.last
-  %div= link_to 'Remove Meeting', @meeting,:confirm => "Are you sure?", :method => :delete
-  %div= link_to 'Back to Club', club_path(@club)
+%span.span-4
+  .span-4#header_box.meeting_background Meeting
+  .span-2= link_to '(change)', edit_meeting_path(@meeting)
+  .span-2= link_to '(remove)', @meeting,:confirm => "Are you sure?", :method => :delete
+  .span-2= link_to '(Club)', club_path(@club)
+%span.span-16  
+  %span.span-8#header_box= @meeting.meeting_date_pretty
+  .span-20.colborder
+    %div
+      %h4.span-2
+        Theme:
+      %span.span-12= @meeting.theme
+  .span-16
+    %h4.span-2
+      Roles:
+    %span.span-8
+      %table
+        = render :partial => 'role', :collection => @roles
+        %tr
+          %td= link_to '(+ Add Role)', new_meeting_role_path(@meeting, @role) 
+  
