--- a/app/views/meetings/_form.html.haml
+++ b/app/views/meetings/_form.html.haml
@@ -5,10 +5,15 @@
       %ul
         - @meeting.errors.full_messages.each do |msg|
           %li= msg
-  = f.label :meeting_date
-  = f.text_field :meeting_date
-  %div
-  = f.label :theme
-  = f.text_field :theme
-  .actions
+  %div.span-20
+    %span.span-4.edit_label.meeting_background Editing Meeting
+    %span.span-3
+      %h4 Meeting Date:
+    %span.span-12= f.text_field :meeting_date
+  %div.span-20
+    %span.span-3.prepend-4
+      %h4 Theme:
+    %span.span-6= f.text_field :theme
+  %div.span-20.prepend-7
     = f.submit 'Save'
+    = link_to 'or Cancel', @meeting
