--- a/app/views/members/show.html.haml
+++ b/app/views/members/show.html.haml
@@ -1,17 +1,17 @@
 %div#header_box.span-16
-  %span#member_background.span-4 Member
+  %span.member_background.span-4 Member
   %span.span-8= @member.name
   %span.span-2= link_to 'Edit', edit_member_path(@member)
 %hr
 %div#content_box.span-16
-  %span#club_background.span-4 
+  %span.club_background.span-4 
     %h3 Clubs
   %span.span-8
     %table
       = render :partial => 'club', :collection => @clubs
 %hr
 %div#content_box.span-16
-  %span#meeting_background.span-4 
+  %span.meeting_background.span-4 
     %h3 Roles
   %span.span-11
     %table
