Fixed New Role format to standard.
TODO: fix the new roles and move to ajaxified format.  This doesn't work - too darned clunky.

--- a/app/views/roles/edit.html.haml
+++ b/app/views/roles/edit.html.haml
@@ -1,6 +1,6 @@
 %span.span-4
   %span.span-4.edit_label.meeting_background  Meeting
-  %span.span-4= @meeting.meeting_date
+  %span.span-4= @role.meeting.meeting_date
 %span.span-16
   %h2.span-6.last
     Changing Roles
