Sorting roles by meeting date not working
There's something missing here.

--- a/app/views/members/show.html.haml
+++ b/app/views/members/show.html.haml
@@ -18,4 +18,4 @@
       %tr
         %th Date
         %th Role
-      = render :partial => 'role', :collection => @roles
+      = render :partial => 'role', :collection => @member.roles
