Lots of clean up around the house.  Fixed "new" club.

--- a/app/views/members/show.html.haml
+++ b/app/views/members/show.html.haml
@@ -12,7 +12,7 @@
 %hr
 %div#content_box.span-16
   %span.meeting_background.span-4 
-    %h3 Roles
+    %h3 Meetings
   %span.span-11
     %table
       %tr
