--- a/app/views/clubs/_form.html.haml
+++ b/app/views/clubs/_form.html.haml
@@ -1,19 +1,17 @@
 = form_for @club do |f|
-  %div.span-20
-    %span.span-4.edit_label.club_background Editing Club
+  %div.span-16
     %span.span-3
       %h4 Name
     %span.span-12= f.text_field :name
-  %div.span-20
-    %span.span-3.prepend-4
+  %div.span-16
+    %span.span-3
       %h4 Address
     %span.span-6.textarea= f.text_area :address, :rows => 3
-  %div.span-20
-    %span.span-3.prepend-4
+  %div.span-16
+    %span.span-3
       %h4 Club Number
     %span.span-12= f.text_field :club_number
-    
-  %div.span-20.prepend-7
+  %div.span-16.prepend-3
     = f.submit 'Save'
     = link_to 'or Cancel', @club
   
