--- a/app/views/clubs/show.html.haml
+++ b/app/views/clubs/show.html.haml
@@ -1,6 +1,7 @@
 %span.span-4
   .span-4#header_box.club_background Club
   .span-2= link_to '(change)', edit_club_path(@club)
+  .span-2= link_to '(Add a club)', new_club_path()
   .span-2= link_to '(remove)', @club,:confirm => "Are you sure?", :method => :delete
 %span.span-16
   %span.span-8#header_box= @club.name
