--- a/app/views/meetings/show.html.haml
+++ b/app/views/meetings/show.html.haml
@@ -17,5 +17,5 @@
       %table
         = render :partial => 'role', :collection => @roles
         %tr
-          %td= link_to '(+ Add Role)', new_meeting_role_path(@meeting, @role) 
+          %td{:colspan => "2"}= link_to '(+ Add Role)', new_meeting_role_path(@meeting, @role) 
   
