--- a/app/views/roles/new.html.haml
+++ b/app/views/roles/new.html.haml
@@ -1,12 +1,13 @@
-%h1 new role
-
 %span.span-4
   %span.span-4.edit_label.meeting_background  Meeting
   %span.span-4= @meeting.meeting_date
-%span-16.last
+  .span-2= link_to '(change)', edit_meeting_path(@meeting)
+  .span-2= link_to '(remove)', @meeting,:confirm => "Are you sure?", :method => :delete
+  .span-2= link_to '(Meeting)', meeting_path(@meeting)
+%span-16
   %h2.span-6.last
-    Adding Roles
-  .span-16.prepend-4
+    Add a Role:
+  .span-16
     = render 'form'
 
 / = link_to 'Back', roles_path
