--- a/app/views/clubs/edit.html.haml
+++ b/app/views/clubs/edit.html.haml
@@ -1,3 +1,7 @@
-%div.last
-  = render 'form'
-%div    
+%span.span-4
+  .span-4#header_box.club_background Club
+  .span-2= link_to '(return)', @club
+%span.span-16
+  %span.span-8#header_box Edit this club
+  .span-16
+    = render 'form'
