--- a/app/views/members/_form.html.haml
+++ b/app/views/members/_form.html.haml
@@ -1,29 +1,10 @@
-= form_for @member do |f|
-  -if @member.errors.any?
-    #errorExplanation
-      %h2= "#{pluralize(@member.errors.count, "error")} prohibited this member from being saved:"
-      %ul
-        - @member.errors.full_messages.each do |msg|
-          %li= msg  
-  %fieldset
-    %legend
-      Enter Member Details
-    .nick_name
-      = f.label :name
-      = f.text_field :name
-    .email
-      = f.label :email
-      = f.text_field :email
-    .phone
-      = f.label :phone
-      = f.text_field :phone
-      
+= semantic_form_for @member do |f|
+  - f.inputs do
+    = f.input :name, :as => :string
+    = f.input :email, :as => :email
+    = f.input :phone, :as => :phone
     - if @editing_self
-      .password
-        = f.label :password, "Password"
-        = f.password_field :password, :size => 40
-      .password_confirmation
-        = f.label :password_confirmation, "Confirm"
-        = f.password_field :password_confirmation, :size => 40
-    .submit
-    = f.submit
+      = f.input :password
+      = f.input :password_confirmation
+ 
+  = f.buttons :commit
