--- a/app/views/members/edit.html.haml
+++ b/app/views/members/edit.html.haml
@@ -1,8 +1,7 @@
-%h1 Editing Member 
-%h2= @editing_self
-= render 'form'
-
-= link_to 'Destroy', @member, :confirm => 'Are you sure?', :method => :delete
-= link_to 'Show', @member
-\|
-= link_to 'Back', members_path
+%span.span-4
+  .span-4#header_box.member_background Member
+  .span-2= link_to '(return)', @member
+  .span-2= link_to 'Destroy', @member, :confirm => 'Are you sure?', :method => :delete
+%span.span-16
+  %span.span-last#header_box Edit member information
+  = render 'form'
