--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -5,7 +5,8 @@
   %title ToastSchedule
   = stylesheet_link_tag("blueprint/screen.css")
   = stylesheet_link_tag("blueprint/ie.css")
-  = stylesheet_link_tag 'formtastic', 'formtastic_changes'
+  = stylesheet_link_tag("formtastic_changes")
+  = stylesheet_link_tag("formtastic")
   = stylesheet_link_tag("special.css")
   = javascript_include_tag 'jquery', 'rails', 'application'
   = javascript_include_tag "jquery.min.js", "application"
