--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -5,6 +5,7 @@
   %title ToastSchedule
   = stylesheet_link_tag("blueprint/screen.css")
   = stylesheet_link_tag("blueprint/ie.css")
+  = stylesheet_link_tag "blueprint/print.css", :media => "print"
   = stylesheet_link_tag("formtastic_changes")
   = stylesheet_link_tag("formtastic")
   = stylesheet_link_tag("special.css")
@@ -17,7 +18,7 @@
   %p#notice= notice 
   %p#class= alert
   .container
-    .span-24
+    .span-20
       %span.right.small
         - if session[:member_id]
           = "Signed in as "
