Continued cleanup start page.  Added fun font.
Need to get color scheme into the front page.

--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -1,4 +1,4 @@
-%h1.span-24 TM Schedule Me
+%h1.span-24.font_pacifico TM Schedule Me
 
 %p.span-16
   Speech clubs like 
@@ -6,20 +6,19 @@
   give you great opportunities to advance your speaking skills.  However, keeping track of your own progress towards goals and keeping your club on track with several different speakers can be a nightmare of spreadsheets, outdated tools, and multiple e-mails. 
   
 %p.span-24 TM Schedule Me is an online tool that will help keep your club on track, on time and moving forward to the next goals.
-.span-24
-  .span-6
-    %h3 Members
-    %ul.prepend-1
-      %li keep on track with upcoming meetings and roles
-      %li know where you are in reaching their goals
-      %li get recognition for achievements
-  .span-10
-    %h3 Officers
-    %ul.prepend-1
-      %li President : see the big picture of your clubs progress and recognize achievements
-      %li VP Education : tame multiple conflicting schedule requests 
-      %li VP Membership : follow attendance and identify members needing help with speeches
-      %li Treasurers : track and follow up on dues 
+.span24
+  %h3.span-4 Members
+  %ul.span-19.last
+    %li keep on track with upcoming meetings and roles
+    %li know where you are in reaching their goals
+    %li get recognition for achievements
+.span24
+  %h3.span-4 Officers
+  %ul.span-19.last
+    %li President : see the big picture of your clubs progress and recognize achievements
+    %li VP Education : tame multiple conflicting schedule requests 
+    %li VP Membership : follow attendance and identify members needing help with speeches
+    %li Treasurers : track and follow up on dues 
     
 %p.span-16
   To get started, register as a member and then add your own club.  If your club is already using this site, contact one of your officers to get started using the site. 
