--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -2,7 +2,7 @@
 
 %html
 %head
-  %title ToastSchedule
+  %title= @clubname
   = stylesheet_link_tag('http://fonts.googleapis.com/css?family=Pacifico')
   = stylesheet_link_tag("blueprint/screen.css")
   = stylesheet_link_tag("blueprint/ie.css")
@@ -19,7 +19,9 @@
   %p#notice= notice 
   %p#class= alert
   .container
-    .span-20
+    .span-15
+      %h1.font_pacifico= @clubname
+    .span-6
       %span.right.small
         - if session[:member_id]
           = "Signed in as "
