Breaking up the roles and meetings.
Fixed the nil sort, but now have other problems.

--- a/app/views/meetings/_form.html.haml
+++ b/app/views/meetings/_form.html.haml
@@ -8,8 +8,8 @@
   %div.span-20
     %span.span-4.edit_label.meeting_background Editing Meeting
     %span.span-3
-      %h4 Meeting Date
-    %span.span-12= f.text_field :meeting_date, :as => :date
+      %h4=f.label :meeting_date
+    %span.span-12= f.text_field :meeting_date
   %div.span-20
     %span.span-3.prepend-4
       %h4 Theme:
