--- a/app/views/members/show.html.haml
+++ b/app/views/members/show.html.haml
@@ -25,4 +25,4 @@
       %h3.club_background Clubs
       %span.span-8
         %table
-          = render :partial => 'club', :collection => @clubs     
+          = render :partial => 'club', :collection => @member.clubs.all
