Implementing content_for on header box.
TODO: Implement content_for on side nav and top nav

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -20,7 +20,8 @@
   %p#class= alert
   .container
     .span-15
-      %h1.font_pacifico= @clubname
+      %h1.font_pacifico
+        = yield :top_title
     .span-8
       %span.right.small
         - if session[:member_id]
