--- a/app/views/members/show.html.haml
+++ b/app/views/members/show.html.haml
@@ -1,3 +1,5 @@
+= content_for :top_title do
+  = "Member - " + @member.name
 .span-4
   .span-4#header_box.member_background Member
   .span-2= link_to 'Edit', edit_member_path(@member)
