--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -3,7 +3,7 @@
 %html
 %head
   %title= @header_text
-  = stylesheet_link_tag('http://fonts.googleapis.com/css?family=Pacifico')
+  = stylesheet_link_tag('http://fonts.googleapis.com/css?family=Droid+Serif')
   = stylesheet_link_tag("blueprint/screen.css")
   = stylesheet_link_tag("blueprint/ie.css")
   = stylesheet_link_tag "blueprint/print.css", :media => "print"
@@ -20,7 +20,7 @@
   %p#class= alert
   .container
     .span-15
-      %h1.font_pacifico
+      %h1.font_droid_serif
         = yield :top_title
     .span-8
       %span.right.small
