--- a/app/views/meetings/show.html.haml
+++ b/app/views/meetings/show.html.haml
@@ -1,3 +1,5 @@
+= content_for :top_title do
+  = "Meeting - " + @meeting.meeting_date_short
 %span.span-4
   .span-4#header_box.meeting_background Meeting
   .span-2= link_to '(change)', edit_meeting_path(@meeting)
