--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -1,3 +1,5 @@
+= content_for :top_title do
+  = "TM Schedule Me"
 %p.span-16
   Speech clubs like 
   %a{:href => "http://www.toastmasters.org"} Toastmasters 
