--- a/public/stylesheets/special.css
+++ b/public/stylesheets/special.css
@@ -32,3 +32,7 @@
 .font_pacifico {
   font-family: 'Pacifico', arial, serif; 
 }
+
+.font_droid_serif {
+  font-family: 'Droid Serif', arial, serif;
+}
