--- a/app/views/meetings/_form.html.haml
+++ b/app/views/meetings/_form.html.haml
@@ -24,4 +24,4 @@
           %td= link_to '(+ Add Role)', new_meeting_role_path(@meeting, @role) 
   %div.span-20.prepend-7
     = f.submit 'Save'
-    = link_to 'or Cancel', @meeting
+    = link_to 'or Back to Meeting', @meeting
