--- a/app/views/meetings/edit.html.haml
+++ b/app/views/meetings/edit.html.haml
@@ -1,5 +1,7 @@
 %div{:type=>"text", :id=>"datepicker"} 
-
-= render 'form'
+.span-4.edit_label.meeting_background Meeting
+.span-18.last
+  %p
+  = render 'form'
 
 / = link_to 'Back', agendas_path
