--- a/app/views/members/edit.html.haml
+++ b/app/views/members/edit.html.haml
@@ -1,7 +1,6 @@
 %span.span-4
   .span-4#header_box.member_background Member
-  .span-2= link_to '(return)', @member
-  .span-2= link_to 'Destroy', @member, :confirm => 'Are you sure?', :method => :delete
+  .span-2= link_to 'Remove Member', @member, :confirm => 'Are you sure?', :method => :delete
 %span.span-16
   %span.span-last#header_box Edit member information
   = render 'form'
