--- a/app/views/members/show.html.haml
+++ b/app/views/members/show.html.haml
@@ -3,6 +3,7 @@
 .span-4
   .span-4#header_box.member_background Member
   .span-2= link_to 'Edit', edit_member_path(@member)
+  .span-2= link_to 'New', new_member_path()
 .span-16
   .span-8#header_box= @member.name
 .span-16#content_box
