--- a/app/views/roles/edit.html.haml
+++ b/app/views/roles/edit.html.haml
@@ -1,10 +1,14 @@
 %span.span-4
   %span.span-4.edit_label.meeting_background  Meeting
-  %span.span-4= @role.meeting.meeting_date
+  .span-2= link_to '(change)', edit_meeting_path(@meeting)
+  .span-2= link_to '(Meeting)', meeting_path(@meeting)
 %span.span-16
-  %h2.span-6.last
+  %h2.span-16
+    = @meeting.meeting_date_pretty
+  %h3.span-6.last
     Changing Roles
-  = render 'form'
+  .span-16.prepend
+    = render 'form'
 
 = link_to 'Show', @role
 \|
