Back to work son.

--- a/app/views/members/show.html.haml
+++ b/app/views/members/show.html.haml
@@ -24,6 +24,7 @@
             %th Date
             %th Role
           = render :partial => 'role', :collection => @member.roles
+        / TODO: Add in new Role function for a person
     %span.span-4 
       %h3.club_background Clubs
       %span.span-8
