Role types starting to look good.
Want to streamline.

--- a/app/views/role_types/_form.html.haml
+++ b/app/views/role_types/_form.html.haml
@@ -7,6 +7,6 @@
           %li= msg
   - f.inputs do 
     = f.input :name
-    = f.input :responsibility, :input_html => { :class => 'autogrow', :rows => 10, :cols => 20, :maxlength => 10  }
+    = f.input :responsibility, :input_html => { :class => 'autogrow', :rows => 10, :cols => 20}
     = f.input :tm_reference_path
   = f.buttons :commit
