--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -22,9 +22,13 @@
   %p#class= alert
   .container
     .span-24.site_title
-      .span-10
+      .span-8
         = link_to 'TM Schedule Me', root_url, :style => 'text-decoration: none'
-      %span.log_in_bar
+      .span-3
+        =link_to "Members", members_path
+      .span-2
+        =link_to "Clubs", clubs_path
+      %span.log_in_bar.span-3
         - if session[:member_id]
           = "Signed in as "
           %b
