--- a/app/views/members/index.html.haml
+++ b/app/views/members/index.html.haml
@@ -1,7 +1,7 @@
 %span.span-4
   .span-4#header_box.member_background Members
 %span.span-16
-  %span.span-last#header_box= link_to @club.name, @club
+  %span.span-last#header_box= link_to @club.name + " Members", @club 
   %table
     %tr
       %th Name
