--- a/app/views/meetings/index.html.haml
+++ b/app/views/meetings/index.html.haml
@@ -1,17 +1,11 @@
-%h1 Listing meetings
-
-%table
-  %tr
-    %th
-    %th
-    %th
-
-  - @meetings.each do |meeting|
+%span.span-4
+  .span-4#header_box.meeting_background Meetings
+  .span-2= link_to '(Club)', club_path(@club)
+%span.span.8
+  %table
     %tr
-      %td= link_to 'Show', meeting
-      %td= link_to 'Edit', edit_meeting_path(meeting)
-      %td= link_to 'Destroy', meeting, :confirm => 'Are you sure?', :method => :delete
-
-%br
+      %th Date
+      %th Theme
+    = render @meetings
 
 = link_to 'New meeting', new_meeting_path
