--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -22,16 +22,15 @@
   %p#class= alert
   .container
     .span-24.site_title
-      .span-12= render "layouts/nav_header"
+      .span-13
+        %div.log_in_bar TM Schedule
+        %div= render "layouts/nav_header"
       .span-10
         %span.log_in_bar= render "layouts/nav_login"
         .span-10
-          .span-3 
+          .span-3.meeting_background 
             = link_to "Meetings", meetings_path
-          .span-3
+          .span-3.member_background
             =link_to "Members", members_path
-          .span-3
-            =link_to "My Clubs", clubs_path
-          
     .span-24
       = yield
