--- a/app/views/layouts/_nav_header.html.haml
+++ b/app/views/layouts/_nav_header.html.haml
@@ -1,4 +1,4 @@
-- if @header_text.nil?
+- if @club.nil?
   = link_to 'TM Schedule Me', root_url, :style => 'text-decoration: none'
 - else
-  = @header_text
+  = link_to @club.name, @club, :style => 'text-decoration: none'
