--- a/app/views/meetings/edit.html.haml
+++ b/app/views/meetings/edit.html.haml
@@ -1,5 +1,7 @@
 %div{:type=>"text", :id=>"datepicker"} 
-.span-4.edit_label.meeting_background Meeting
+.span-4
+  .edit_label.meeting_background Meeting
+  .span-2= link_to '(remove)', @meeting,:confirm => "Are you sure?", :method => :delete
 .span-18.last
   %p
   = render 'form'
