--- a/app/views/meetings/show.html.haml
+++ b/app/views/meetings/show.html.haml
@@ -1,10 +1,11 @@
 %span.span-4
   .span-4#header_box.meeting_background Meeting
   .span-2= link_to '(change)', edit_meeting_path(@meeting)
-  .span-2= link_to '(remove)', @meeting,:confirm => "Are you sure?", :method => :delete
-  .span-2= link_to '(Club)', club_path(@club)
+  .span-2= link_to '(add a meeting)', new_meeting_path
 %span.span-16  
-  %span.span-8#header_box= @meeting.meeting_date_pretty
+  %div.span-16#header_box= @meeting.meeting_date_pretty
+  %h3.span-2 Theme:
+  .span-8= @meeting.theme
   .span-16
     %h4.span-2
       Roles:
