--- a/app/views/members/index.html.haml
+++ b/app/views/members/index.html.haml
@@ -1,7 +1,7 @@
 %span.span-4
   .span-4#header_box.member_background Members
+  .span-4= link_to '(+ New Member)', new_member_path
 %span.span-16
-  %span.span-last#header_box= link_to @club.name + " Members", @club 
   %table
     %tr
       %th Name
@@ -9,7 +9,6 @@
     - @members.each do |member|
       %tr
         %td= link_to member.name, member
-  = link_to 'New Member', new_member_path
   
 %br
 
