Trying to sort out the Templates - not even close to getting the models right.

--- a/app/views/templates/show.html.haml
+++ b/app/views/templates/show.html.haml
@@ -16,8 +16,11 @@
       %h3 Name
     %span.span-6
       %code= @template.name
+  %p
+    Count
+    = @template.template_roles.count
   %span.span-5
     %h4.meeting_background Roles
-    = render :partial => 'shared/role', :collection => @template.roles
-    = link_to "(+) New Role", new_template_role_path(@template, @role)
+    = render :partial => "template_role", :collection => @template.template_roles
+    / = link_to "(+) New Role", new_template_role_path(@template, @role)
 
