Massive move to complex forms.
Getting there with the Javascript.

--- a/app/views/templates/_form.html.haml
+++ b/app/views/templates/_form.html.haml
@@ -8,5 +8,6 @@
   - f.inputs do
     = f.input :name, :as => :string
 
+  = render :partial => "plate", :collection => @template.plates
   .actions
     = f.submit 'Save'
