--- a/app/views/templates/show.html.haml
+++ b/app/views/templates/show.html.haml
@@ -1,6 +1,5 @@
 %p#notice= notice
 
-
 = link_to 'Edit', edit_template_path(@template)
 \|
 = link_to 'Back', templates_path
@@ -18,9 +17,10 @@
       %code= @template.name
   %p
     Count
-    = @template.template_roles.count
-  %span.span-5
-    %h4.meeting_background Roles
-    = render :partial => "template_role", :collection => @template.template_roles
-    / = link_to "(+) New Role", new_template_role_path(@template, @role)
+    - @template.plates.each do |plate|
+      %p= plate.title
+  / %span.span-5
+  / %h4.meeting_background Roles
+  / = render :partial => "template_role", :collection => @template.template_roles
+  / = link_to "(+) New Role", new_template_role_path(@template, @role)
 
