--- a/app/views/templates/show.html.haml
+++ b/app/views/templates/show.html.haml
@@ -15,10 +15,9 @@
       %h3 Name
     %span.span-6
       %code= @template.name
-  %p
-    Count
-    - @template.plates.each do |plate|
-      %p= plate.title
+    %span.span-6
+      - @template.plates.each do |plate|
+        %p= plate.title
   / %span.span-5
   / %h4.meeting_background Roles
   / = render :partial => "template_role", :collection => @template.template_roles
