--- a/app/views/plates/_form.html.haml
+++ b/app/views/plates/_form.html.haml
@@ -1,4 +1,4 @@
-= form_for @plate do |f|
+= form_for (@plate.template, @plate) do |f|
   -if @plate.errors.any?
     #error_explanation
       %h2= "#{pluralize(@plate.errors.count, "error")} prohibited this plate from being saved:"
